<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:orientation="vertical"
            android:id="@+id/ll_clientregister_formholder">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="20sp"
                android:hint="@string/email"
                android:id="@+id/et_clientregister_email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="20sp"
                android:hint="@string/username"
                android:id="@+id/et_clientregister_username" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="20sp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/et_clientregister_pswd" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="20sp"
                android:hint="@string/confirmpassword"
                android:inputType="textPassword"
                android:id="@+id/et_clientconfirmregister_pswd" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:background="#232d61"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="15sp"
                android:id="@+id/btn_clientregister_register" android:onClick="OnClientRegister" />



        </LinearLayout>


    </ScrollView>

</RelativeLayout>
