<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:orientation="vertical"
            android:id="@+id/ll_clientlogin_formholder">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="20sp"
                android:hint="@string/email"
                android:id="@+id/et_clientlogin_email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="20sp"
                android:hint="@string/password"
                android:id="@+id/et_clientlogin_pswd" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:background="#232d61"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="15sp"
                android:id="@+id/btn_clientlogin_login" android:onClick="OnClientLogin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/ll_clientlogin_linksholder">

                <TextView
                    android:id="@+id/txt_clientlogin_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="20sp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="start"
                    android:text="@string/register_now"
                    android:textColor="#0e14ae"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="20sp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    android:textColor="#0e14ae"
                    android:textStyle="bold"
                    android:id="@+id/txt_clientlogin_forgotpswd" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>